# Match-Risk-Engine

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
Doc/: binance_optimized_engine_architecture.md  file_structure.md  hft_matching_engine_architecture.docx  implementation_plan.md  implementation_plan_1  matching_risk_engine_architecture.md  questions.docx  understanding.docx
crates/core-types/: Cargo.toml
crates/core-types/src/: commands.rs  events.rs  ids.rs  lib.rs  log_entry.rs  order_status.rs  price.rs  qty.rs  side.rs
crates/dpdk-gateway/: Cargo.toml
crates/dpdk-gateway/src/: eal.rs  lib.rs  mempool.rs  port.rs  rx.rs
crates/dual-log/: Cargo.toml
crates/dual-log/src/: dual_log.rs  lib.rs  pending_ring.rs
crates/gateway/: Cargo.toml
crates/gateway/src/: codec.rs  lib.rs  market_data.rs  server.rs  session.rs
crates/logger/: Cargo.toml
crates/logger/src/: lib.rs  logger.rs
crates/matching-engine/: Cargo.toml
crates/matching-engine/src/: affinity.rs  engine.rs  lib.rs  mapper.rs  metrics.rs  risk_check.rs
crates/metrics/: Cargo.toml
crates/metrics/src/: aggregator.rs
crates/order-book/: Cargo.toml
crates/order-book/src/: apply.rs  book.rs  level.rs  lib.rs  order.rs
crates/order-book/src/tests/: diff_fuzz.rs  matching_unit.rs  mod.rs
crates/ring-buffer/: Cargo.toml
crates/ring-buffer/src/: cache_pad.rs  lib.rs  spmc.rs  spsc.rs
crates/ring-buffer/src/tests/: mod.rs  spmc_basic.rs  spmc_loom.rs  spsc_basic.rs  spsc_loom.rs
crates/risk-engine/: Cargo.toml
crates/risk-engine/src/: config.rs  lib.rs  position.rs  shard.rs  tier0.rs
crates/second-engine/: Cargo.toml
crates/second-engine/src/: engine.rs  lib.rs
crates/seqlock/: Cargo.toml
crates/seqlock/src/: account_risk_state.rs  lib.rs  table.rs
crates/seqlock/src/tests/: mod.rs  seqlock_basic.rs  seqlock_loom.rs
crates/sequencer/: Cargo.toml
crates/sequencer/src/: failover.rs  halt.rs  lib.rs  sequencer.rs  snapshot_marker.rs  standby.rs
crates/sim/: Cargo.toml
crates/sim/src/: chaos.rs  harness.rs  lib.rs  replay.rs
crates/sim/src/scenarios/: basic_fills.rs  liquidation.rs  snapshot_recovery.rs
crates/sorter/: Cargo.toml
crates/sorter/src/: leader.rs  lib.rs  load_monitor.rs  sorter.rs
crates/wal/: Cargo.toml
crates/wal/src/: lib.rs  log.rs  pmem.rs  recovery.rs  snapshot.rs
