[package]
name = "sim"
version = "0.1.0"
edition = "2021"

[dependencies]
core-types    = { path = "../core-types" }
ring-buffer   = { path = "../ring-buffer" }
order-book    = { path = "../order-book" }
matching-engine = { path = "../matching-engine" }
sequencer     = { path = "../sequencer" }
risk-engine   = { path = "../risk-engine" }
seqlock       = { path = "../seqlock" }
wal           = { path = "../wal" }

rand          = "0.8"
serde         = { version = "1", features = ["derive"] }
serde_json    = "1"